WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72436
Layout Test http/tests/multipart/invalid-image-data.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=72436
Summary
Layout Test http/tests/multipart/invalid-image-data.html is crashing
Peter Kasting
Reported
2011-11-15 16:14:47 PST
The following layout test is failing an assertion on the Win dbg 2 canary (see
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=http%2Ftests%2Fmultipart%2Finvalid-image-data.html
): http/tests/multipart/invalid-image-data.html ASSERTION FAILED: size == 0 || size >= m_encodedSize (this is in CachedResource::setEncodedSize()) The most obvious change in the blame list is
http://trac.webkit.org/changeset/100311/
.
Attachments
patch
(4.10 KB, patch)
2011-11-16 11:18 PST
,
Nate Chapin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nate Chapin
Comment 1
2011-11-16 11:18:21 PST
Created
attachment 115413
[details]
patch
Adam Barth
Comment 2
2011-11-16 11:20:36 PST
Comment on
attachment 115413
[details]
patch I'm not sure sendDataToResource is the perfect name, but I understand why you chose it.
WebKit Review Bot
Comment 3
2011-11-16 14:11:10 PST
Comment on
attachment 115413
[details]
patch Clearing flags on attachment: 115413 Committed
r100503
: <
http://trac.webkit.org/changeset/100503
>
WebKit Review Bot
Comment 4
2011-11-16 14:11:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug